--- a/css/styles.css
+++ b/css/styles.css
@@ -6,7 +6,7 @@
 
 body {
     font-family: 'Poppins', sans-serif;
-    font-size: 62.5%;
+    font-size:16px;
     font-weight: 400;
     background: linear-gradient(to bottom right,#fc00ff, #00dbde);
     text-align: center;
@@ -44,6 +44,10 @@ form{
     text-align: left;
 }
 
+.form-group {
+    margin-bottom: .91rem;
+}
+
 .form-group label {
     color: white;
     display:block;
@@ -65,12 +69,12 @@ form{
     margin-bottom: .4rem;
 }
 
-.form-group p {
+.form-group .head {
     color: white;
     font-size: .8rem;
-    font-size: .8rem;
     margin-bottom: .2rem;
-    font-weight: 500;
+    font-weight: 700;
+    text-transform: uppercase;
 }
 
 .form-group select {
@@ -84,3 +88,11 @@ form{
 .form-group input[radio] {
     display:inline-block
 } 
+
+span {
+    font-size: .7rem;
+}
+
+.form-group textarea {
+    width: 100%;
+}
