--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,6 @@
-* {
+*,
+*::before,
+*::after {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -6,7 +8,7 @@
 
 body {
     font-family: 'Poppins', sans-serif;
-    font-size:16px;
+    font-size:1rem;
     font-weight: 400;
     background: linear-gradient(to bottom right,#fc00ff, #00dbde);
     text-align: center;
